--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     />
     <!-- <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script> -->
   </head>
-  <body>
+  <body style="font-family: 'Outfit' !important;">
     <main id="root"></main>
     <script type="module" src="/src/main.jsx"></script>
   </body>
